# globdis

./: .gitignore  CMakeLists.txt  README.md  build-all.sh  build-linux.sh  build.sh  mingw-w64-toolchain.cmake  test_offset_display  test_offset_display.cpp  test_register_aliasing.cpp
docs/: register_aliasing_implementation.md
include/: GlobalCallAnalyzer.hpp  PEDefs.hpp
src/: GlobalCallAnalyzer.cpp  GlobalCallAnalyzer.hpp  main.cpp  main_linux.cpp  test_nested_pointers.asm  test_program.cpp
